tdf#128951: restore passing nullptr to ScTableSheetObj when not inserted yet

This partially reverts 009e7a54f40ebacd9dd4a394504c277789699801

Change-Id: I5a9605ff9d0ff1cd825968fb247b2a3bf4b2902a
Reviewed-on: https://gerrit.libreoffice.org/83464
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>